--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "styled-components": "^6.1.13",
+    "swiper": "^11.2.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
