--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: pandoc/latex
     steps:
       - uses: actions/checkout@v2
-      - name: Install mustache (to update the date)
-        run: apk add ruby && gem install mustache
+
+      # 노드 버전 설정
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "22"
+
+      # 의존성 설치
+      - name: Install dependencies
+        run: npm install
+
+      # 빌드
       - name: creates output
         run: sh ./build.sh
+
+      # 다른 리포지토리에 푸시
       - name: Pushes to another repository
         id: push_directory
         uses: cpina/github-action-push-to-another-repository@main
@@ -26,5 +37,6 @@ jobs:
           user-email: ${{ secrets.NOAH_GITHUB_EMAIL }}
           commit-message: ${{ github.event.commits[0].message }}
           target-branch: main
+
       - name: Test get variable exported by push-to-another-repository
         run: echo $DESTINATION_CLONED_DIRECTORY
